--- a/_posts/plotly_js/ternary-contour/2016-04-13-soil-types-ternary-fill-plot.html
+++ b/_posts/plotly_js/ternary-contour/2016-04-13-soil-types-ternary-fill-plot.html
@@ -1,5 +1,5 @@
 ---
-name: soil types ternary fill plot
+name: Basic Filled Ternary Plot
 plot_url: https://codepen.io/plotly/embed/VaGrRB/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: ternary-contour
