--- a/_posts/python/tree-plot/2015-06-30-tree-plot.html
+++ b/_posts/python/tree-plot/2015-06-30-tree-plot.html
@@ -1,13 +1,14 @@
 ---
 permalink: python/tree-plots/
 description: How to make interactive tree-plot in Python with Plotly. An examples of a tree-plot in Plotly.
-title: Python Tree-plots | plotly
+name: Python Tree-plots | plotly
 has_thumbnail: true
 thumbnail: thumbnail/treeplot.jpg
 layout: user-guide
 name: Tree-plots
 language: python
-display_as: statistical
+title: Python Tree-plots | plotly
+display_as: chart_type
 has_thumbnail: true
 page_type: example_index
 order: 9
@@ -18,7 +19,10 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Tree-plots-in-Python">Tree-plots in Python<a class="anchor-link" href="#Tree-plots-in-Python">&#182;</a></h1>
+<h4 id="New-to-Plotly?">New to Plotly?<a class="anchor-link" href="#New-to-Plotly?">&#182;</a></h4><p>Plotly's Python library is free and open source! <a href="https://plot.ly/python/getting-started/">Get started</a> by dowloading the client and <a href="https://plot.ly/python/getting-started/">reading the primer</a>.
+<br>You can set up Plotly to work in <a href="https://plot.ly/python/getting-started/#initialization-for-online-plotting">online</a> or <a href="https://plot.ly/python/getting-started/#initialization-for-offline-plotting">offline</a> mode, or in <a href="https://plot.ly/python/getting-started/#start-plotting-online">jupyter notebooks</a>.
+<br>We also have a quick-reference <a href="https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf">cheatsheet</a> (new!) to help you get started!</p>
+
 </div>
 </div>
 </div>
@@ -27,13 +31,13 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Make-a-tree-plot-in-Plotly-with-IGRAPH">Make a tree-plot in Plotly with IGRAPH<a class="anchor-link" href="#Make-a-tree-plot-in-Plotly-with-IGRAPH">&#182;</a></h3>
+<h4 id="Basic-Tree-Plot-in-Plotly-with-igraph">Basic Tree-Plot in Plotly with <a href="http://igraph.org/python/">igraph</a><a class="anchor-link" href="#Basic-Tree-Plot-in-Plotly-with-igraph">&#182;</a></h4>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[38]:</div>
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -52,7 +56,7 @@ order: 9
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[38]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[10]:</div>
 
 
 <div class="output_text output_subarea output_execute_result">
@@ -70,13 +74,13 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Set-Up-Tree-with-igraph">Set Up Tree with igraph<a class="anchor-link" href="#Set-Up-Tree-with-igraph">&#182;</a></h5>
+<h4 id="Set-Up-Tree-with-igraph">Set Up Tree with <a href="http://igraph.org/python/">igraph</a><a class="anchor-link" href="#Set-Up-Tree-with-igraph">&#182;</a></h4>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[39]:</div>
+<div class="prompt input_prompt">In&nbsp;[11]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">nr_vertices</span> <span class="o">=</span> <span class="mi">25</span>
@@ -98,7 +102,7 @@ order: 9
 <span class="n">Ye</span> <span class="o">=</span> <span class="p">[]</span>
 <span class="k">for</span> <span class="n">edge</span> <span class="ow">in</span> <span class="n">E</span><span class="p">:</span>
     <span class="n">Xe</span><span class="o">+=</span><span class="p">[</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">0</span><span class="p">]][</span><span class="mi">0</span><span class="p">],</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">1</span><span class="p">]][</span><span class="mi">0</span><span class="p">],</span> <span class="bp">None</span><span class="p">]</span>
-    <span class="n">Ye</span><span class="o">+=</span><span class="p">[</span><span class="mi">2</span><span class="o">*</span><span class="n">M</span><span class="o">-</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">0</span><span class="p">]][</span><span class="mi">1</span><span class="p">],</span><span class="mi">2</span><span class="o">*</span><span class="n">M</span><span class="o">-</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">1</span><span class="p">]][</span><span class="mi">1</span><span class="p">],</span> <span class="bp">None</span><span class="p">]</span>
+    <span class="n">Ye</span><span class="o">+=</span><span class="p">[</span><span class="mi">2</span><span class="o">*</span><span class="n">M</span><span class="o">-</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">0</span><span class="p">]][</span><span class="mi">1</span><span class="p">],</span><span class="mi">2</span><span class="o">*</span><span class="n">M</span><span class="o">-</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">1</span><span class="p">]][</span><span class="mi">1</span><span class="p">],</span> <span class="bp">None</span><span class="p">]</span> 
 
 <span class="n">labels</span> <span class="o">=</span> <span class="n">v_label</span>
 </pre></div>
@@ -113,13 +117,13 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Create-Plotly-Traces">Create Plotly Traces<a class="anchor-link" href="#Create-Plotly-Traces">&#182;</a></h5>
+<h4 id="Create-Plotly-Traces">Create Plotly Traces<a class="anchor-link" href="#Create-Plotly-Traces">&#182;</a></h4>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[40]:</div>
+<div class="prompt input_prompt">In&nbsp;[12]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">lines</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="n">Xe</span><span class="p">,</span>
@@ -133,7 +137,7 @@ order: 9
                   <span class="n">mode</span><span class="o">=</span><span class="s">&#39;markers&#39;</span><span class="p">,</span>
                   <span class="n">name</span><span class="o">=</span><span class="s">&#39;&#39;</span><span class="p">,</span>
                   <span class="n">marker</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">symbol</span><span class="o">=</span><span class="s">&#39;dot&#39;</span><span class="p">,</span>
-                                <span class="n">size</span><span class="o">=</span><span class="mi">18</span><span class="p">,</span>
+                                <span class="n">size</span><span class="o">=</span><span class="mi">18</span><span class="p">,</span> 
                                 <span class="n">color</span><span class="o">=</span><span class="s">&#39;#6175c1&#39;</span><span class="p">,</span>    <span class="c">#&#39;#DB4551&#39;, </span>
                                 <span class="n">line</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="s">&#39;rgb(50,50,50)&#39;</span><span class="p">,</span> <span class="n">width</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
                                 <span class="p">),</span>
@@ -153,13 +157,13 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Create-text-inside-the-circle-via-annotations">Create text inside the circle via annotations<a class="anchor-link" href="#Create-text-inside-the-circle-via-annotations">&#182;</a></h5>
+<h4 id="Create-Text-Inside-the-Circle-via-Annotations">Create Text Inside the Circle via Annotations<a class="anchor-link" href="#Create-Text-Inside-the-Circle-via-Annotations">&#182;</a></h4>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[41]:</div>
+<div class="prompt input_prompt">In&nbsp;[13]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="k">def</span> <span class="nf">make_annotations</span><span class="p">(</span><span class="n">pos</span><span class="p">,</span> <span class="n">text</span><span class="p">,</span> <span class="n">font_size</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span> <span class="n">font_color</span><span class="o">=</span><span class="s">&#39;rgb(250,250,250)&#39;</span><span class="p">):</span>
@@ -176,7 +180,7 @@ order: 9
                 <span class="n">font</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="n">font_color</span><span class="p">,</span> <span class="n">size</span><span class="o">=</span><span class="n">font_size</span><span class="p">),</span>
                 <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
         <span class="p">)</span>
-    <span class="k">return</span> <span class="n">annotations</span>
+    <span class="k">return</span> <span class="n">annotations</span>  
 </pre></div>
 
 </div>
@@ -189,13 +193,13 @@ order: 9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Add-Axis-Specifications-and-Create-the-Layout">Add Axis Specifications and Create the Layout<a class="anchor-link" href="#Add-Axis-Specifications-and-Create-the-Layout">&#182;</a></h5>
+<h4 id="Add-Axis-Specifications-and-Create-the-Layout">Add Axis Specifications and Create the Layout<a class="anchor-link" href="#Add-Axis-Specifications-and-Create-the-Layout">&#182;</a></h4>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[42]:</div>
+<div class="prompt input_prompt">In&nbsp;[14]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">axis</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">showline</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="c"># hide axis line, grid, ticklabels and  title</span>
@@ -204,15 +208,15 @@ order: 9
             <span class="n">showticklabels</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span>
             <span class="p">)</span>
 
-<span class="n">layout</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">title</span><span class="o">=</span> <span class="s">&#39;Tree with Reingold-Tilford Layout&#39;</span><span class="p">,</span>
+<span class="n">layout</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">title</span><span class="o">=</span> <span class="s">&#39;Tree with Reingold-Tilford Layout&#39;</span><span class="p">,</span>  
               <span class="n">annotations</span><span class="o">=</span><span class="n">make_annotations</span><span class="p">(</span><span class="n">position</span><span class="p">,</span> <span class="n">v_label</span><span class="p">),</span>
               <span class="n">font</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="mi">12</span><span class="p">),</span>
               <span class="n">showlegend</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span>
               <span class="n">xaxis</span><span class="o">=</span><span class="n">go</span><span class="o">.</span><span class="n">XAxis</span><span class="p">(</span><span class="n">axis</span><span class="p">),</span>
-              <span class="n">yaxis</span><span class="o">=</span><span class="n">go</span><span class="o">.</span><span class="n">YAxis</span><span class="p">(</span><span class="n">axis</span><span class="p">),</span>
+              <span class="n">yaxis</span><span class="o">=</span><span class="n">go</span><span class="o">.</span><span class="n">YAxis</span><span class="p">(</span><span class="n">axis</span><span class="p">),</span>          
               <span class="n">margin</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">l</span><span class="o">=</span><span class="mi">40</span><span class="p">,</span> <span class="n">r</span><span class="o">=</span><span class="mi">40</span><span class="p">,</span> <span class="n">b</span><span class="o">=</span><span class="mi">85</span><span class="p">,</span> <span class="n">t</span><span class="o">=</span><span class="mi">100</span><span class="p">),</span>
               <span class="n">hovermode</span><span class="o">=</span><span class="s">&#39;closest&#39;</span><span class="p">,</span>
-              <span class="n">plot_bgcolor</span><span class="o">=</span><span class="s">&#39;rgb(248,248,248)&#39;</span>
+              <span class="n">plot_bgcolor</span><span class="o">=</span><span class="s">&#39;rgb(248,248,248)&#39;</span>          
               <span class="p">)</span>
 </pre></div>
 
@@ -221,9 +225,18 @@ order: 9
 </div>
 
 </div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Plot!">Plot!<a class="anchor-link" href="#Plot!">&#182;</a></h4>
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[43]:</div>
+<div class="prompt input_prompt">In&nbsp;[15]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">data</span><span class="o">=</span><span class="n">go</span><span class="o">.</span><span class="n">Data</span><span class="p">([</span><span class="n">lines</span><span class="p">,</span> <span class="n">dots</span><span class="p">])</span>
@@ -240,10 +253,10 @@ order: 9
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[43]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[15]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/10119.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/10119.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -251,4 +264,14 @@ order: 9
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4><p>See <a href="https://plot.ly/python/reference/">https://plot.ly/python/reference/</a> for more information and chart attribute options and <a href="http://igraph.org/python/">http://igraph.org/python/</a> for more information about the igraph package!</p>
+
+</div>
+</div>
 </div>{% endraw %}
