upgrade publisher in tree doc

--- a/_posts/python/treemap/2015-06-30-treemap.html
+++ b/_posts/python/treemap/2015-06-30-treemap.html
@@ -1,7 +1,7 @@
 ---
-permalink: python/treemaps
+permalink: python/treemaps/
 description: How to make interactive treemap in Python with Plotly and Squarify. An examples of a treemap in Plotly using Squarify.
-title: Python Treemaps | plotly
+name: Python Treemaps | plotly
 has_thumbnail: true
 thumbnail: thumbnail/treemap.jpg
 layout: user-guide
